# stateful_quadrature

./: .gitignore  DESIGN.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pixi.toml  pyproject.toml
.github/workflows/: publish.yml
benchmarks/: compare_scipy.py
examples/: __init__.py  basic_usage.py
stateful_quadrature/: __init__.py  _compat.py  _integrator.py  _rules.py  _version.py
tests/: test_scipy_compat.py  test_scipy_ported.py  test_stateful_integrator.py
